--- a/EducationSearching/Views/Home/About.cshtml
+++ b/EducationSearching/Views/Home/About.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "О программе";
+    ViewBag.Title = "О ВолгГТУ";
 }
 
 <hgroup class="title">
@@ -9,15 +9,7 @@
 
 <article>
     <p>
-        В этой области можно указать дополнительные сведения.
-    </p>
-
-    <p>
-        В этой области можно указать дополнительные сведения.
-    </p>
-
-    <p>
-        В этой области можно указать дополнительные сведения.
+        <a href="http://vstu.ru/">Перейти на сайт ВолгГТУ</a>
     </p>
 </article>
 
@@ -28,7 +20,7 @@
     </p>
     <ul>
         <li>@Html.ActionLink("Домашняя страница", "Index", "Home")</li>
-        <li>@Html.ActionLink("О программе", "About", "Home")</li>
+        <li>@Html.ActionLink("О ВолгГТУе", "About", "Home")</li>
         <li>@Html.ActionLink("Контакт", "Contact", "Home")</li>
     </ul>
 </aside>
