--- a/EducationSearching/Views/Home/Contact.cshtml
+++ b/EducationSearching/Views/Home/Contact.cshtml
@@ -1,50 +1,16 @@
 ﻿@{
-    ViewBag.Title = "Контакт";
+    ViewBag.Title = "Контакты";
 }
 
 <hgroup class="title">
     <h1>@ViewBag.Title.</h1>
-    <h2>@ViewBag.Message</h2>
 </hgroup>
 
 <section class="contact">
-    <header>
-        <h3>Телефон</h3>
-    </header>
     <p>
-        <span class="label">Основной:</span>
-        <span>425.555.0100</span>
+        <span><a href="http://vstu.ru/">Перейти на сайт ВолгГТУ</a></span>
     </p>
     <p>
-        <span class="label">Нерабочее время:</span>
-        <span>425.555.0199</span>
-    </p>
-</section>
-
-<section class="contact">
-    <header>
-        <h3>Адрес электронной почты</h3>
-    </header>
-    <p>
-        <span class="label">Поддержка:</span>
-        <span><a href="mailto:Support@example.com">Support@example.com</a></span>
-    </p>
-    <p>
-        <span class="label">Маркетинг:</span>
-        <span><a href="mailto:Marketing@example.com">Marketing@example.com</a></span>
-    </p>
-    <p>
-        <span class="label">Общие вопросы:</span>
-        <span><a href="mailto:General@example.com">General@example.com</a></span>
-    </p>
-</section>
-
-<section class="contact">
-    <header>
-        <h3>Адрес</h3>
-    </header>
-    <p>
-        One Microsoft Way<br />
-        Redmond, WA 98052-6399
+        <span><a href="http://edu.vstu.ru/">Перейти на сайт 'edu.vstu'</a></span>
     </p>
 </section>
