--- a/EducationSearching/Views/Account/Register.cshtml
+++ b/EducationSearching/Views/Account/Register.cshtml
@@ -20,6 +20,10 @@
                 @Html.TextBoxFor(m => m.UserName)
             </li>
             <li>
+                @Html.LabelFor(m => m.FIOUserName)
+                @Html.TextBoxFor(m => m.FIOUserName)
+            </li>
+            <li>
                 @Html.LabelFor(m => m.Password)
                 @Html.PasswordFor(m => m.Password)
             </li>
