--- a/EducationSearching/Views/AdminPanel/Index_Predmet.cshtml
+++ b/EducationSearching/Views/AdminPanel/Index_Predmet.cshtml
@@ -35,6 +35,7 @@
         </p>
         <ul>
             <li>@Html.ActionLink("Предметы", "Index_Predmet", "AdminPanel")</li>
+            <li>@Html.ActionLink("Добавить предмет", "AddPredmet", "Main")</li>
             <li>@Html.ActionLink("Скачать файлы", "Downloads", "UploadF")</li>
             <li>@Html.ActionLink("Контакт", "Contact", "Home")</li>
         </ul>
