--- a/EducationSearching/Views/AdminPanel/Details_Predmet.cshtml
+++ b/EducationSearching/Views/AdminPanel/Details_Predmet.cshtml
@@ -12,15 +12,16 @@
         <legend>PredmetDB</legend>
 
         <div class="display-label">
-           Дисциплина
+            <br />
+           Дисциплина:
         </div>
         <div class="display-field">
             @Html.DisplayFor(model => model.Disciplina)
         </div>
     </fieldset>
     <p>
-        @Html.ActionLink("Редактировать", "Edit_Predmet", new { id = Model.Id }) |
-        @Html.ActionLink("Назад к списку", "Index_Predmet")
+        <button onclick="location.href='@Url.Action("Edit_Predmet", "AdminPanel", new { id = Model.Id })'" type="button" class="btn btn-info btn-primary">Редактировать</button> |
+        <button onclick="location.href='@Url.Action("Index_Predmet", "AdminPanel")'" type="button" class="btn btn-primary">Назад к списку</button>
     </p>
     </article>
 
@@ -31,7 +32,6 @@
             </p>
             <ul>
                 <li>@Html.ActionLink("Предметы", "Index_Predmet", "AdminPanel")</li>
-                <li>@Html.ActionLink("Скачать файлы", "Downloads", "UploadF")</li>
                 <li>@Html.ActionLink("Контакт", "Contact", "Home")</li>
             </ul>
         </aside>
