--- a/EducationSearching/Views/AdminPanel/Create_Predmet.cshtml
+++ b/EducationSearching/Views/AdminPanel/Create_Predmet.cshtml
@@ -23,12 +23,12 @@
         </div>
 
         <p>
-            <input type="submit" value="Create" />
+            <input type="submit" value="Создать" class="btn btn-success"/>
         </p>
     </fieldset>
 }
     <div>
-        @Html.ActionLink("Назад к списку", "Index_Predmet")
+        <button onclick="location.href='@Url.Action("Index_Predmet", "AdminPanel")'" type="button" class="btn btn-primary">Назад к списку</button>
     </div>
 </article>
 
@@ -39,7 +39,6 @@
     </p>
     <ul>
         <li>@Html.ActionLink("Предметы", "Index_Predmet", "AdminPanel")</li>
-        <li>@Html.ActionLink("Скачать файлы", "Downloads", "UploadF")</li>
         <li>@Html.ActionLink("Контакт", "Contact", "Home")</li>
     </ul>
 </aside>
