--- a/EducationSearching/Views/Main/Index.cshtml
+++ b/EducationSearching/Views/Main/Index.cshtml
@@ -50,11 +50,12 @@
         
             <td class="divider" style="width:90px"> 
                 <button onclick="location.href='@Url.Action("Review", "Main", new { id=item.Id })'" type="button" class="btn btn-primary btn-block btn-small">Подробнее</button>
-                @if (string.Equals(@ViewBag.UserRole = "Administrator", "Administrator"))
+                <button onclick="location.href='@Url.Action("Downloads", "UploadF", new { id=item.predmetId })'" type="button" class="btn btn-warning btn-block btn-small">Файлы</button>
+               
+                 @if (string.Equals(@ViewBag.UserRole, "Administrator"))
                 {
                     <button onclick="location.href='@Url.Action("EditRecord", "Main", new { id=item.Id })'" type="button" class="btn btn-info btn-block btn-small">Редактировать</button>
            
-                    <button onclick="location.href='@Url.Action("FileReview", "Main", new { id=item.Id })'" type="button" class="btn btn-warning btn-block btn-small">Файлы</button>
            
                     <button onclick="location.href='@Url.Action("Remove", "Main", new { id=item.Id })'" type="button" class="btn btn-danger btn-block btn-small">Удалить</button>
                 }
