--- a/EducationSearching/Views/UploadF/Downloads.cshtml
+++ b/EducationSearching/Views/UploadF/Downloads.cshtml
@@ -2,11 +2,11 @@
 
 <h2>Скачать файлы</h2>
 
- <table> 
+<button onclick="location.href='@Url.Action("UploadFile", "UploadF")'" type="button" class="btn btn-success">Загрузить файлы</button>
+<table class="table table-hover table-striped">
      <tr>
-         <th> Id </th>
-         <th> Кто загрузил </th>
-         <th> Дата </th>
+         <th style="width:150px"> Кто загрузил </th>
+         <th style="width:150px"> Дата </th>
          <th> Программа </th>
          <th> Скан </th>
          <th> Документы </th>
@@ -15,9 +15,8 @@
      @foreach (var key in Model.Keys)
      {
         <tr>
-            <td> @key </td>
-            <td> @Model[key].whoUser </td>
-            <td> @Model[key].data </td>
+            <td style="width:150px"> @Model[key].whoUser </td>
+            <td style="width:150px"> @Model[key].data </td>
             <td>@if (@Model[key].programId != 0)
                 { 
                     @Html.ActionLink(@Model[key].program, "DownloadFile", new { Id = @Model[key].programId }, new { title = @Model[key].aboutprogram })
@@ -33,7 +32,9 @@
                      @Html.ActionLink(@Model[key].docs, "DownloadFile", new { Id = @Model[key].docsId }, new { title = @Model[key].aboutdocs })
                  }
             </td> 
-            <td> @Html.ActionLink("Удалить", "DeleteFiles", new { Id = @key }) </td> 
+            <td> 
+                <button onclick="location.href='@Url.Action("DeleteFiles", "UploadF", new { id=@Model[key].Id })'" type="button" class="btn btn-danger btn-block btn-small">Удалить</button>
+            </td> 
         </tr>
      }
  </table>
